# RAG-system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
config/: settings.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
notebooks/: rag_research.ipynb
src/backend/: app.py
src/backend/core/domain/: __init__.py  ports.py
src/backend/core/services/: rag_service.py
src/backend/core/services/interfaces/: __init__.py  i_rag_service.py
src/backend/infrastructure/controllers/: dependencies.py  rag_controller.py  routers.py
src/backend/infrastructure/formatter/: __init__.py  default_formatter.py
src/backend/infrastructure/llm/: __init__.py  openai_llm.py
src/backend/infrastructure/retriever/: __init__.py  qdrant_retriever.py
src/frontend/: streamlit_app.py
